<resources>
    <string name="zw_empty_string"></string>
    <string name="app_name">ziftrWALLET</string>
    <string name="zw_app_name">ziftrWALLET</string>
    <string name="zw_action_settings">Settings</string>
    <string name="zw_password_hint">Enter your password</string>
    <string name="zw_old_passphrase_hint">Enter your old password</string>
    <string name="zw_dialog_new_passphrase_hint">Enter your new password</string>
    <string name="zw_dialog_confirm_password_hint">Re-enter your password</string>
    <string name="zw_menu_text_accounts">ACCOUNTS</string>
    <string name="zw_menu_text_terms">TERMS</string>
    <string name="zw_menu_text_settings">SETTINGS</string>
    <string name="zw_menu_text_about">ABOUT</string>
    <string name="zw_menu_text_security">SECURITY</string>
    <string name="zw_continue_button_text">CONTINUE</string>
    <string name="zw_cancel_button_text">CANCEL</string>
    <string name="zw_send_button_text">SEND</string>
    <string name="zw_send_to_address">SEND TO: </string>
    <string name="zw_send_to_address_name">NAME: </string>
    <string name="zw_receive_message_title">MESSAGE: </string>
    <string name="zw_send_amount">AMOUNT: </string>
    <string name="zw_send_amount_equivalent">USD</string>
    <string name="zw_send_transaction_fee">FEE/KB: </string>
    <string name="zw_send_total">TOTAL: </string>
    <string name="zw_send_default_total">0.00</string>
    <string name="zw_send_default_total_fiat_equiv">($0.00)</string>
    <string name="zw_splash_screen_description">Splash Screen</string>
    <string name="zw_splash_screen_activity_title">Splash</string>
    <string name="zw_add_new_wallet_content_description">Add New Wallet</string>
    <string name="zw_add_currency">ADD CURRENCY</string>
    <string name="zw_bitcoin">Bitcoin</string>
    <string name="zw_bitcoin_caps">BITCOIN</string>
    <string name="zw_right_caret_content_description"></string>
    <string name="zw_tx_list_divider_default">PENDING</string>
    <string name="zw_tx_list_title_default">REI</string>
    <string name="zw_tx_list_time_default">June 30, 2014  5:03 pm</string>
    <string name="zw_receive_coins_address_label_box_title">ADDRESS LABEL</string>
    <string name="zw_receive_coins_address_value_box_title">ADDRESS</string>
    <string name="zw_receive_coins_address_value_default">1morseGzJtU3XUDQFpZqKCx7GLnhvYqbU1morseGzJtU3XUDQFpZqKCx7GLnhvYqbU</string>
    <string name="zw_tx_details_pending_label">(Pending)</string>
    <string name="zw_tx_details_amount_sent_label">Amount Sent</string>
    <string name="Placeholder">Placeholder</string>
    <string name="zw_tx_details_confirmation_fee_label">Confirmation Fee</string>
    <string name="zw_tx_label">Transaction Note</string>
    <string name="zw_tx_details_sent">Sent</string>
    <string name="zw_tx_routing_address">Address</string>
    <string name="zw_dialog_ok">OK</string>
    <string name="zw_dialog_cancel">Cancel</string>
    <string name="zw_dialog_select">Select</string>
    <string name="zw_dialog_continue">Continue</string>
    <string name="zw_ab_menu_description">Menu</string>
    <string name="zw_ab_home_description">Home</string>
    <string name="zw_ab_back_description">Back</string>
    <string name="zw_ab_search_description">Search</string>
    <string name="zw_add_a_currency">Add a Currency</string>
    <string name="zw_ziftr_site_link"><a href="http://www.ziftrcoin.com">Website</a></string>
    <string name="zw_reset_password">Reset Password</string>
    <string name="zw_set_password">Set Password</string>
    <string name="zw_about">About</string>
    <string name="zw_disable_password">Disable Password</string>
    <string name="zw_fiat_currency">Fiat Currency</string>
    <string name="zw_editable_confirmation_fees">Editable Confirmation Fees</string>
    <string name="zw_currency">CURRENCY</string>
    <string name="zw_password">PASSWORD</string>
    <string name="zw_confirmation_fee">CONFIRMATION FEES</string>
    <string name="hello">Hello!</string>
    <string name="zw_welcome">Welcome to ziftrWALLET!</string>
    <string name="zw_welcome_password_message">Please take a moment to set your password below. 
        This will ensure that your coins are secure in the unfortunate event that someone steals or hacks your phone. 
        We recommend using a few words that you are sure to remember and that only you will know.\n\nOnce you\'ve set your 
        password, DO NOT FORGET IT! You will not be able to spend your coins without it.</string>
    <string name="zw_welcome_name_message">Please also take a moment to provide your name below. This value is only 
        stored on your device and, if provided, persons sending you coins will not need to type your name every 
        time they transact with you. We suggest you use your first name, or the name you commonly use.</string>
    <string name="zw_receive_button_text">RECEIVE</string>
    <string name="zw_create_password">CREATE PASSWORD</string>
    <string name="zw_save_password">SAVE PASSWORD</string>
    <string name="zw_ask_me_later">ASK ME LATER</string>
    <string name="zw_save_name">SAVE NAME</string>
    <string name="zw_set_name">SET NAME</string>
    <string name="zw_name_label">NAME</string>
    <string name="zw_set_name_settings">Set Name</string>
    <string name="zw_disable_name">Disable Name</string>
    <string name="zw_create_new_address">CREATE NEW ADDRESS</string>
    <string name="zw_total_label">Total</string>
    <string name="zw_add_currency_description">This is your home screen where you can navigate between all of your different wallets. Click the + icon above to begin adding currencies to your ziftrWALLET.</string>
    <string name="zw_about_text">ziftrWALLET streamlines the process of sending, receiving and storing different types of cryptocurrency.\n\n
        ziftrWALLET was created by the talented entrepreneurs, software developers and marketers behind Ziftr, a suite of shopping tools that has helped more than 2 million users find the best deals at their favorite online retailers.\n\n
		To learn more about Ziftr, go to www.ziftr.com.\n\n
		Coming Soon: ziftrCOIN!\n\n
		ziftrCOIN, the first digital currency developed for online shoppers, aims to revolutionize shopping by putting cryptocurrency into the hands of consumers and enabling them to conduct simple, secure transactions at their favorite online retailers.\n\n
		To learn more about ziftrCOIN, go to www.ziftrCOIN.com.</string>
    <string name="zw_security_text"><b>ZiftrWallet</b> is a decentralized mobile wallet in that addresses and keys are stored on your phone. This way your wallet is safe from server-side attacks, however it is necessary for the user to keep the phone physically secure. 
	    \n\nBe wary of allowing untrusted people or apps access to your phone and be sure to set your password. \n\nIt is recommended to store a spendable amount of cryptocurrency on ziftrWallet rather than your entire balance.
	   \n\n<b>WARNING: Remember to transfer your coins to other wallets before uninstalling.</b></string>
    <string name="zw_no_currency_description">No more wallets to add! Ensure you have wifi for this list to populate.</string>
    <string name="zw_no_currency">No Available Currencies</string>
    <string name="zw_zxing_license">This software uses ZXing under the Apache 2 license  http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="debug_warning">This will enable &quot;testnet&quot; coins and advanced options that may compromise wallet security and/or device performance. Use at your own risk! \n\nAre you sure you want to activate debug mode?</string>
    <string name="send_fee_info">Why is there a fee?\n\nThis fee is NOT paid to Ziftr. The fee goes to the miner that secures your transaction as a reward for their service. 
        This is standard for all cryptocurrency applications. Without it, your transaction would likely stay as pending for an inconvenient length of time.</string>
    <string name="zw_warning_unconfirmed">Show Unconfirmed Coins Warning</string>
    <string name="zw_incorrect_password">Error: Incorrect password.</string>
    <string name="zw_incorrect_reset_password_match">The passwords you entered don\'t match. Your previous password is still in place.</string>
    <string name="zw_incorrect_reset_password">The password you entered doesn\'t match your previous password. Your previous password is still in place.</string>
    <string name="zw_invalid_address_uri">The address is not valid.</string>
    <string name="zw_searchbar_hint">search</string>
    <string name="zw_dialog_set_name_complete">"Your name is set to:\u0020"</string>
    <string name="zw_set_password_complete">Your new password is set!</string>
    <string name="zw_disabled_password">Warning: your password is disabled.</string>
    <string name="zw_warning">Warning</string>
    <string name="zw_delete_data_warning">You are about to delete your wallet data! Ensure you have your wallet exported or you will lose all your coins!</string>
    <string name="zw_dialog_deactivate_message">Are you sure you want to deactivate this wallet? This will not actually delete any of your stored data, and you can reactivate it at any time.</string>
    <string name="zw_dialog_create_address">Addresses cannot be deleted once they are created. Are you sure?</string>
    <string name="zw_dialog_enter_password">Please enter your password.</string>
    <string name="zw_dialog_deactivate">Deactivate</string>
    <string name="zw_dialog_create_password">Create your password</string>
    <string name="zw_dialog_save">Save</string>
    <string name="zw_dialog_new_password_match">The passwords entered don\'t match. Please try again.</string>
    <string name="zw_dialog_change_password">Change your password.</string>
    <string name="zw_dialog_old_encryption">Your wallet is already encrypted with an older password. Enter your old password.</string>
    <string name="zw_dialog_old_encryption_changed">Encryption has been removed. Please try setting your password again.</string>
    <string name="zw_dialog_old_encryption_failed">Incorrect password. Your wallet is still encrypted with your old password.</string>
    <string name="zw_dialog_old_encryption_fatal">There was a fatal error with wallet encryption. Please backup your wallet files and reinstall the application.</string>
    <string name="zw_dialog_database_error">There was an error reading your wallet files. You must restart the application.</string>
    <string name="zw_dialog_restart">Restart</string>
    <string name="zw_dialog_blank_name">You cannot enter a blank name. Name can be disabled from the settings menu.</string>
    <string name="zw_dialog_enter_name">Please enter your name.</string>
    <string name="zw_dialog_edit_address">Edit address label.</string>
    <string name="zw_dialog_error_qrcode_data">There was an error in the scanned data.</string>
    <string name="zw_dialog_error_qrcode_address">The scanned address is not valid.</string>
    <string name="zw_dialog_error_address_format">The address is not formatted correctly. Please try again.</string>
    <string name="zw_dialog_error_no_coins">The current wallet does not have enough coins to send the amount requested.</string>
    <string name="zw_dialog_send_confirmation">Are you sure you want to send:</string>
    <string name="zw_dialog_send_confirmation_fee">(includes %1$s fee)</string>
    <string name="zw_dialog_send_confirmation_to">to</string>
    <string name="zw_welcome_accept_terms">AGREE</string>
    <string name="zw_welcome_terms">Terms and Conditions.</string>
    <string name="zw_welcome_terms_directions">Please take a moment to review our terms of service at: \n \n<a href="http://www.ziftrwallet.com/terms-conditions">http://www.ziftrwallet.com/terms-conditions</a> \n \nBy using ziftrWALLET you agree to the terms and conditions provided at the above link. \n \n</string>
</resources>