<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/ow_horizontal_margin"
    android:paddingRight="@dimen/ow_horizontal_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/White"
        android:textSize="@dimen/ow_txt_mediumlarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zw_welcome_name_message"
        android:textColor="@color/White"
        android:textSize="@dimen/ow_txt_small" />

    <View
        style="@style/white_divider"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zw_set_name"
        android:textColor="@color/White"
        android:textSize="@dimen/ow_txt_small" />

    <include
        android:id="@+id/usersName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        layout="@layout/_edit_text_shadow" />

    <Button
        android:id="@+id/set_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/clickable_button_color"
        android:text="@string/zw_save_name"
        android:textColor="@color/White"
        android:textSize="@dimen/ow_txt_small" />

    <View
        style="@style/white_divider"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" />

    <Button
        android:id="@+id/skip_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/clickable_button_color"
        android:text="@string/zw_ask_me_later"
        android:textColor="@color/White"
        android:textSize="@dimen/ow_txt_small" />

</LinearLayout>