<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/zw_horizontal_margin"
    android:paddingRight="@dimen/zw_horizontal_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/White"
        android:textSize="@dimen/zw_txt_mediumlarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zw_welcome_terms"
        android:textColor="@color/zw_default_text"
        android:textSize="@dimen/zw_txt_small" />

    <TextView
        android:id="@+id/termsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zw_welcome_terms_directions"
        android:textColor="@color/zw_default_text"
        android:textColorLink="@color/Black"
        android:textSize="@dimen/zw_txt_small" />

    <View
        style="@style/white_divider"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" />

    <Button
        android:id="@+id/acceptTerms"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/clickable_button_color"
        android:text="@string/zw_welcome_accept_terms"
        android:textColor="@color/White"
        android:textSize="@dimen/zw_txt_small" />


</LinearLayout>