<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingTop="10dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/zw_quarter_icon_size"
            android:background="@color/White"
            android:contentDescription="@string/zw_empty_string"
            android:padding="@dimen/zw_large_icon_margin"
            android:src="@drawable/logo_ziftrwallet_orange" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_quarter_icon_size"
            android:layout_marginBottom="10dp"
            android:background="@drawable/dropshadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/zw_horizontal_margin"
            android:layout_marginRight="@dimen/zw_horizontal_margin"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/zw_warning"
                android:textColor="@color/zw_default_text"
                android:textSize="@dimen/zw_txt_mediumlarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zw_delete_data_warning"
                android:textColor="@color/zw_default_text"
                android:textSize="@dimen/zw_txt_small" />

            <View
                style="@style/white_divider"
                android:paddingBottom="4dp"
                android:paddingTop="4dp" />

            <Button
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/clickable_button_color"
                android:text="@string/zw_continue_button_text"
                android:textColor="@color/White"
                android:textSize="@dimen/zw_txt_small" >
            </Button>

            <View
                style="@style/white_divider"
                android:paddingBottom="4dp"
                android:paddingTop="4dp" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/clickable_button_color"
                android:text="@string/zw_cancel_button_text"
                android:textColor="@color/White"
                android:textSize="@dimen/zw_txt_small" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>