<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_quarter_icon_size"
            android:background="@drawable/dropshadow" />

        <TextView
            style="@style/divider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zw_currency" />

        <RelativeLayout
            android:id="@+id/select_fiat_currency"
            style="@style/settings_bar"
            android:background="@drawable/currency_list_selector"
            android:clickable="true" >

            <TextView
                android:id="@+id/currencyLabel"
                style="@style/setting_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/zw_fiat_currency" />

            <ImageView
                android:id="@+id/fiat_arrow"
                android:layout_width="@dimen/zw_total_icon_side_length"
                android:layout_height="@dimen/zw_total_icon_side_length"
                android:layout_alignParentRight="true"
                android:padding="@dimen/zw_borderless_icon_margin"
                android:src="@drawable/previous_orange" />

            <TextView
                android:id="@+id/chosen_fiat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/fiat_arrow"
                android:text="USD"
                android:textColor="@color/orangeSoda"
                android:textSize="@dimen/zw_txt_medium" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_quarter_icon_size"
            android:background="@drawable/dropshadow" />

        <TextView
            style="@style/divider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zw_confirmation_fee" />

        <RelativeLayout
            android:id="@+id/editable_confirmation_fees_bar"
            style="@style/settings_bar"
            android:background="@drawable/currency_list_selector" >

            <TextView
                style="@style/setting_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/zw_editable_confirmation_fees" />

            <CheckBox
                android:id="@+id/editable_confirmation_fees"
                android:layout_width="@dimen/zw_checkbox_size"
                android:layout_height="@dimen/zw_checkbox_size"
                android:layout_alignParentRight="true"
                android:background="@drawable/orange_checkbox"
                android:button="@null"
                android:paddingBottom="@dimen/zw_quarter_icon_size"
                android:paddingTop="@dimen/zw_quarter_icon_size"
                android:text="@string/zw_empty_string" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/enable_mempool_spending_bar"
            style="@style/settings_bar"
            android:layout_marginTop="1dp"
            android:background="@drawable/currency_list_selector" >

            <TextView
                style="@style/setting_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/zw_warning_unconfirmed" />

            <CheckBox
                android:id="@+id/enable_mempool_spending"
                android:layout_width="@dimen/zw_checkbox_size"
                android:layout_height="@dimen/zw_checkbox_size"
                android:layout_alignParentRight="true"
                android:background="@drawable/orange_checkbox"
                android:button="@null"
                android:paddingBottom="@dimen/zw_quarter_icon_size"
                android:paddingTop="@dimen/zw_quarter_icon_size"
                android:text="@string/zw_empty_string" />
        </RelativeLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_quarter_icon_size"
            android:background="@drawable/dropshadow" />

        <TextView
            style="@style/divider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zw_password" />

        <RelativeLayout
            android:id="@+id/reset_password_button"
            style="@style/settings_bar"
            android:background="@drawable/currency_list_selector" >

            <TextView
                android:id="@+id/reset_password_text"
                style="@style/setting_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/zw_reset_password" />

            <ImageView
                android:layout_width="@dimen/zw_total_icon_side_length"
                android:layout_height="@dimen/zw_total_icon_side_length"
                android:layout_alignParentRight="true"
                android:padding="@dimen/zw_borderless_icon_margin"
                android:src="@drawable/previous_orange" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/disable_passphrase"
            style="@style/settings_bar"
            android:layout_marginTop="1dp"
            android:background="@drawable/currency_list_selector" >

            <TextView
                style="@style/setting_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/zw_disable_password" />

            <ImageView
                android:layout_width="@dimen/zw_total_icon_side_length"
                android:layout_height="@dimen/zw_total_icon_side_length"
                android:layout_alignParentRight="true"
                android:padding="@dimen/zw_borderless_icon_margin"
                android:src="@drawable/previous_orange" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_quarter_icon_size"
            android:background="@drawable/dropshadow" />

        <TextView
            style="@style/divider_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zw_name_label" />

        <RelativeLayout
            android:id="@+id/set_name_button"
            style="@style/settings_bar"
            android:background="@drawable/currency_list_selector" >

            <TextView
                android:id="@+id/set_name_label"
                style="@style/setting_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/zw_set_name_settings" />

            <ImageView
                android:layout_width="@dimen/zw_total_icon_side_length"
                android:layout_height="@dimen/zw_total_icon_side_length"
                android:layout_alignParentRight="true"
                android:padding="@dimen/zw_borderless_icon_margin"
                android:src="@drawable/previous_orange" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/disable_name_button"
            style="@style/settings_bar"
            android:layout_marginTop="1dp"
            android:background="@drawable/currency_list_selector" >

            <TextView
                style="@style/setting_bar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/zw_disable_name" />

            <ImageView
                android:layout_width="@dimen/zw_total_icon_side_length"
                android:layout_height="@dimen/zw_total_icon_side_length"
                android:layout_alignParentRight="true"
                android:padding="@dimen/zw_borderless_icon_margin"
                android:src="@drawable/previous_orange" />
        </RelativeLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_quarter_icon_size"
            android:background="@drawable/dropshadow" />

        <Button
            android:id="@+id/debug_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_button_footer_height"
            android:layout_marginTop="2dp"
            android:background="@drawable/clickable_button_color"
            android:textColor="@color/zw_default_text" />

        <Button
            android:id="@+id/export_db"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_button_footer_height"
            android:layout_marginTop="4dp"
            android:background="@drawable/clickable_button_color"
            android:text="Export Wallet"
            android:textColor="@color/zw_default_text"
            android:visibility="gone" />

        <Button
            android:id="@+id/resync_data"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_button_footer_height"
            android:layout_marginTop="4dp"
            android:background="@drawable/clickable_button_color"
            android:text="Resync All Data"
            android:textColor="@color/zw_default_text"
            android:visibility="gone" />
        
        <Button
            android:id="@+id/enable_logs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_button_footer_height"
            android:layout_marginTop="4dp"
            android:background="@drawable/clickable_button_color"
            android:textColor="@color/zw_default_text"
            android:visibility="gone" />

        <Button
            android:id="@+id/export_logs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_button_footer_height"
            android:layout_marginTop="4dp"
            android:background="@drawable/clickable_button_color"
            android:text="Export Logs"
            android:textColor="@color/zw_default_text"
            android:visibility="gone" />
        
        <Button
            android:id="@+id/change_server"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zw_button_footer_height"
            android:layout_marginTop="4dp"
            android:background="@drawable/clickable_button_color"
            android:text="Change API Server"
            android:textColor="@color/zw_default_text"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>